normalize path to data in solutions

--- a/spaceship_titanic/rozwiazania/Katsiaryna_Bokhan/solution_python.ipynb
+++ b/spaceship_titanic/rozwiazania/Katsiaryna_Bokhan/solution_python.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"dane.csv\")"
+    "data = pd.read_csv(\"../../dane.csv\")"
    ]
   },
   {
