--- a/spaceship_titanic/rozwiazania/Konrad Burdach/datascience.ipynb
+++ b/spaceship_titanic/rozwiazania/Konrad Burdach/datascience.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "warnings.filterwarnings(\"ignore\")\n",
-    "data = pd.read_csv(\"/Users/konradburdach/Downloads/dane.csv\")"
+    "data = pd.read_csv(\"../../dane.csv\")"
    ]
   },
   {
