--- a/spaceship_titanic/rozwiazania/Krzysztof_Adamczyk/project.ipynb
+++ b/spaceship_titanic/rozwiazania/Krzysztof_Adamczyk/project.ipynb
@@ -297,7 +297,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import re\n",
-    "data = pd.read_csv(\"dane.csv\")\n",
+    "data = pd.read_csv(\"../../dane.csv\")\n",
     "display(data)"
    ]
   },
