--- a/spaceship_titanic/rozwiazania/jakub_piwko/Jakub Piwko.ipynb
+++ b/spaceship_titanic/rozwiazania/jakub_piwko/Jakub Piwko.ipynb
@@ -275,7 +275,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df = pd.read_csv(\"dane.csv\")\n",
+    "df = pd.read_csv(\"../../dane.csv\")\n",
     "df.head(10)"
    ]
   },
